# snark-setup-operator

./: .gitignore  Cargo.toml  README.md  script.sh
.github/workflows/: core.yml
e2e/: circuit_bls12_377  circuit_bw6  circuit_mnt4_753  e2e.sh  e2ephase1.sh  e2ephase2.sh  empty.json  empty_phase1.json  empty_phase2.json  nimiq.attestation.txt  nimiq_e2e.sh
scripts/: release_docker.py  setup_all.sh  setup_client.sh  setup_new_ceremony.sh  setup_server.sh
src/: blobstore.rs  data_structs.rs  error.rs  lib.rs  monitor_logger.rs  monitor_paxs_state.rs  monitor_setup_state.rs  transcript_data_structs.rs  utils.rs
