[package]
name = "snark-setup-operator"
version = "0.1.0"
authors = [
    "Kobi Gurkan <kobigurk@gmail.com>",
    "Michael Straka <mstraka100@gmail.com>",
]
edition = "2021"

[dependencies]
anyhow = "1"
azure_core = "0.13"
azure_storage = "0.13"
azure_storage_blobs = "0.13"
tokio = { version = "1.32", features = ["full"] }
byteorder = "1.4"
retry = "1.1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
gumdrop = { version = "0.7" }
url = { version = "2" }
time = "0.3.10"
thiserror = { version = "1" }
tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
hex = "0.4"

phase1 = { git = "https://github.com/nimiq/snark-setup", package = "phase1" }
phase1-cli = { git = "https://github.com/nimiq/snark-setup", package = "phase1-cli" }
phase2 = { git = "https://github.com/nimiq/snark-setup", package = "phase2" }
phase2-cli = { git = "https://github.com/nimiq/snark-setup", package = "phase2-cli" }
setup-utils = { git = "https://github.com/nimiq/snark-setup", package = "setup-utils" }

nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross", package = "nimiq-keys", features = [
    "serde-derive",
] }


ark-ec = { version = "0.4", features = ["std"] }
ark-bls12-377 = { version = "0.4", features = ["std"] }
ark-bls12-381 = { version = "0.4", features = ["std"] }
ark-bw6-761 = { version = "0.4", features = ["std"] }
ark-mnt4-753 = { version = "0.4", features = ["std"] }
ark-mnt6-753 = { version = "0.4", features = ["std"] }

rand = "0.8"
rand_core = "0.6"
reqwest = { version = "0.11", features = [
    "blocking",
    "stream",
    "gzip",
    "json",
] }
secrecy = { version = "0.7" }
ctrlc = "3.1.7"
indicatif = "0.15.0"
openssl-sys = { version = "0.9", features = ["vendored"] }
age = { git = "https://github.com/str4d/rage", rev = "9f96c9c076af760730b189a7973036d96533b928", features = [
    "cli-common",
    "armor",
] }
bincode = "1.3"
panic-control = "0.1.4"
lazy_static = "1.4.0"
futures = "0.3"
futures-retry = "0.5.0"
blake2 = "0.9"
rpassword = "5.0.0"
keep-awake = { git = "https://github.com/mrsmkl/keep-awake-rs", rev = "ce9922386b210450a7681a015b4dd991aed27fe2" }
rayon = "1.3.0"
num_cpus = "1.13"
ring = "0.16.19"
cfg-if = "1.0"
regex = { version = "1.9.3", features = [
    "unicode-case",
] } # required as workaround

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
sysinfo = { version = "0.15.3" }

[features]
default = []
cuda = []
